fix: Sidenav is scrollable if too tall

--- a/src/css/extra.css
+++ b/src/css/extra.css
@@ -190,6 +190,8 @@ a:hover, a:active {
 .bs-sidenav.well {
   border: 0;
   box-shadow: none;
+  max-height: 80vh;
+  overflow: auto;
 }
 
 .wy-nav-content{
